--- a/index.html
+++ b/index.html
@@ -1,153 +1,197 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-<meta charset="UTF-8" />
-<title>HUMAN OS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Human OS - AI Interface</title>
+    <style>
+        /* Estilo Futurista / Dark Mode */
+        body {
+            background-color: #0a0a0b;
+            color: #00ffcc;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
+        }
 
-<style>
-* { box-sizing: border-box; font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif; }
-body { margin: 0; background: #000; color: #fff; display: flex; justify-content: center; align-items: flex-start; min-height: 100vh; padding: 40px 16px; }
-.app { width: 100%; max-width: 420px; }
-h1 { text-align: center; margin-bottom: 4px; font-size: 32px; letter-spacing: 1px; }
-.subtitle { text-align: center; opacity: 0.6; margin-bottom: 32px; }
-.card { background: linear-gradient(180deg, #0a0a0a, #000); border-radius: 14px; padding: 18px; margin-bottom: 16px; border: 1px solid rgba(255,255,255,0.06); }
-label { font-size: 13px; opacity: 0.7; display: block; margin-bottom: 6px; }
-select, textarea { width: 100%; background: #000; color: #fff; border: 1px solid rgba(255,255,255,0.12); border-radius: 10px; padding: 12px; font-size: 14px; }
-textarea { min-height: 80px; resize: none; }
-button { width: 100%; margin-top: 20px; padding: 16px; font-size: 15px; border-radius: 14px; background: #111; color: #fff; border: 1px solid rgba(255,255,255,0.2); cursor: pointer; transition: 0.2s; }
-button:hover { background: #1a1a1a; }
-.output { margin-top: 24px; padding: 18px; border-radius: 14px; border: 1px solid rgba(255,255,255,0.08); display: block; opacity: 1; transition: opacity 0.6s ease-in-out, box-shadow 0.4s ease-in-out; }
-.output h3 { margin-top: 0; font-size: 16px; margin-bottom: 10px; }
-.output p { font-size: 14px; line-height: 1.6; white-space: pre-wrap; color: #fff; }
-.blink { animation: blinkAnim 0.8s infinite; }
-@keyframes blinkAnim { 0% { box-shadow: 0 0 8px #fff; } 50% { box-shadow: 0 0 24px #fff; } 100% { box-shadow: 0 0 8px #fff; } }
-</style>
+        #os-container {
+            width: 90%;
+            max-width: 800px;
+            height: 80vh;
+            background: rgba(20, 20, 25, 0.9);
+            border: 1px solid #00ffcc;
+            border-radius: 15px;
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0 0 20px rgba(0, 255, 204, 0.2);
+        }
+
+        #header {
+            padding: 15px;
+            border-bottom: 1px solid #333;
+            text-align: center;
+            font-weight: bold;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+
+        #chat-window {
+            flex: 1;
+            padding: 20px;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        /* Scrollbar estilizada */
+        #chat-window::-webkit-scrollbar { width: 5px; }
+        #chat-window::-webkit-scrollbar-thumb { background: #00ffcc; border-radius: 10px; }
+
+        .message {
+            max-width: 80%;
+            padding: 10px 15px;
+            border-radius: 10px;
+            line-height: 1.4;
+        }
+
+        .user-msg {
+            align-self: flex-end;
+            background: #00ffcc;
+            color: #0a0a0b;
+        }
+
+        .ai-msg {
+            align-self: flex-start;
+            background: #222;
+            border-left: 3px solid #00ffcc;
+        }
+
+        #input-area {
+            padding: 20px;
+            border-top: 1px solid #333;
+            display: flex;
+            gap: 10px;
+        }
+
+        input {
+            flex: 1;
+            background: transparent;
+            border: 1px solid #444;
+            padding: 12px;
+            color: white;
+            border-radius: 5px;
+            outline: none;
+        }
+
+        input:focus { border-color: #00ffcc; }
+
+        button {
+            background: #00ffcc;
+            border: none;
+            padding: 0 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        button:hover { background: #00cca3; }
+
+        #api-setup {
+            font-size: 12px;
+            color: #666;
+            padding: 5px 20px;
+        }
+    </style>
 </head>
 <body>
 
-<div class="app">
-  <h1>HUMAN OS</h1>
-  <div class="subtitle">Sistema de Execução</div>
+<div id="os-container">
+    <div id="header">Human OS Core</div>
+    <div id="api-setup">Status: Aguardando Comando...</div>
+    
+    <div id="chat-window" id="display">
+        <div class="message ai-msg">Sistema Iniciado. Como posso ajudar hoje, Humano?</div>
+    </div>
 
-  <div class="card">
-    <label>Tempo disponível</label>
-    <select id="tempo">
-      <option value="">Selecione</option>
-      <option>15 minutos</option>
-      <option>30 minutos</option>
-      <option>1 hora</option>
-      <option>2 horas</option>
-    </select>
-  </div>
-
-  <div class="card">
-    <label>Energia mental</label>
-    <select id="energia">
-      <option value="">Selecione</option>
-      <option>Baixa</option>
-      <option>Média</option>
-      <option>Alta</option>
-    </select>
-  </div>
-
-  <div class="card">
-    <label>O que está te travando agora?</label>
-    <textarea id="bloqueio" placeholder="Escreva em uma frase..."></textarea>
-  </div>
-
-  <button onclick="gerarOrdem()">GERAR ORDEM</button>
-
-  <div class="output blink" id="saida">
-    <h3>ORDEM DE EXECUÇÃO</h3>
-    <p id="resultado">Preencha os campos e clique em GERAR ORDEM</p>
-  </div>
+    <div id="input-area">
+        <input type="text" id="userInput" placeholder="Digite seu comando..." onkeypress="if(event.key === 'Enter') sendMessage()">
+        <button onclick="sendMessage()">ENVIAR</button>
+    </div>
 </div>
 
 <script>
-function gerarOrdem() {
-  const tempo = document.getElementById("tempo").value;
-  const energia = document.getElementById("energia").value;
-  const bloqueio = document.getElementById("bloqueio").value;
+    // --- CONFIGURAÇÃO DA MEMÓRIA ---
+    const Memory = {
+        save: (role, text) => {
+            let history = JSON.parse(localStorage.getItem('os_history')) || [];
+            history.push({ role, parts: [{ text }] });
+            if (history.length > 10) history.shift(); // Guarda as últimas 10 frases
+            localStorage.setItem('os_history', JSON.stringify(history));
+        },
+        get: () => JSON.parse(localStorage.getItem('os_history')) || []
+    };
 
-  if (!tempo || !energia || !bloqueio) {
-    alert("Preencha todas as opções antes de gerar a ordem.");
-    return;
-  }
+    // --- CONFIGURAÇÃO DA IA (GEMINI) ---
+    // COLOQUE SUA CHAVE ABAIXO PARA FUNCIONAR
+    const API_KEY = "SUA_CHAVE_AQUI_DENTRO_DAS_ASPAS"; 
 
-  const acoes = {
-    "Alta": [
-      "Execute o maior passo agora mesmo, sem pensar!",
-      "Concentre toda sua energia e vá para ação imediata!",
-      "Não espere, comece pelo item mais importante agora!"
-    ],
-    "Média": [
-      "Comece pelo menor passo e avance rápido.",
-      "Divida a tarefa em partes e execute a primeira imediatamente.",
-      "Escolha uma ação simples e execute sem procrastinar."
-    ],
-    "Baixa": [
-      "Escolha o passo mais simples e apenas comece.",
-      "Não tente tudo de uma vez, faça só o primeiro passo.",
-      "Foque em uma ação mínima e comece devagar."
-    ]
-  };
+    async function sendMessage() {
+        const input = document.getElementById('userInput');
+        const chatWindow = document.getElementById('chat-window');
+        const text = input.value.trim();
 
-  const acao = acoes[energia][Math.floor(Math.random() * acoes[energia].length)];
+        if (!text) return;
 
-  const texto = `
-Você tem ${tempo} e energia ${energia}.
+        // Adiciona mensagem do usuário na tela
+        appendMessage('user', text);
+        input.value = "";
 
-Bloqueio atual: "${bloqueio}".
+        // Mostra que está "pensando"
+        const loadingMsg = appendMessage('ai', 'Processando...');
 
-${acao}
+        try {
+            const history = Memory.get();
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    contents: [...history, { role: "user", parts: [{ text }] }]
+                })
+            });
 
-Ignore o perfeccionismo.
-Execute agora, mesmo sem vontade.
-`;
+            const data = await response.json();
+            const aiText = data.candidates[0].content.parts[0].text;
 
-  const saida = document.getElementById("saida");
-  const resultado = document.getElementById("resultado");
-  resultado.innerText = texto;
+            // Remove o "Processando..." e coloca a resposta real
+            loadingMsg.remove();
+            appendMessage('ai', aiText);
 
-  let cor = "#222";
-  if (energia === "Alta") cor = "#0f8";
-  else if (energia === "Média") cor = "#fc0";
-  else if (energia === "Baixa") cor = "#f33";
+            // Salva na memória
+            Memory.save('user', text);
+            Memory.save('model', aiText);
 
-  saida.style.backgroundColor = cor;
-  saida.style.display = "block";
-  saida.style.opacity = 0;
-  saida.classList.remove("blink");
+        } catch (error) {
+            loadingMsg.innerText = "Erro: Verifique sua chave API ou conexão.";
+            console.error(error);
+        }
+    }
 
-  setTimeout(() => {
-    saida.style.opacity = 1;
-    saida.classList.add("blink");
-  }, 50);
-
-  localStorage.setItem("ultimaOrdem", texto);
-  localStorage.setItem("ultimaCor", cor);
-}
-
-window.onload = () => {
-  const ultima = localStorage.getItem("ultimaOrdem");
-  const cor = localStorage.getItem("ultimaCor");
-  const saida = document.getElementById("saida");
-  const resultado = document.getElementById("resultado");
-
-  if (ultima) {
-    resultado.innerText = ultima;
-    saida.style.backgroundColor = cor || "#222";
-  } else {
-    resultado.innerText = "Preencha os campos e clique em GERAR ORDEM";
-    saida.style.backgroundColor = "#222";
-  }
-
-  saida.style.display = "block";
-  saida.style.opacity = 1;
-  saida.classList.add("blink");
-};
+    function appendMessage(role, text) {
+        const chatWindow = document.getElementById('chat-window');
+        const div = document.createElement('div');
+        div.className = `message ${role === 'user' ? 'user-msg' : 'ai-msg'}`;
+        div.innerText = text;
+        chatWindow.appendChild(div);
+        chatWindow.scrollTop = chatWindow.scrollHeight; // Rola para baixo
+        return div;
+    }
 </script>
 
 </body>
-    </html>
+</html>
