--- a/index.html
+++ b/index.html
@@ -3,182 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Human OS - AI Interface</title>
+    <title>Human OS - Secure Mode</title>
     <style>
-        /* Estilo Futurista / Dark Mode */
-        body {
-            background-color: #0a0a0b;
-            color: #00ffcc;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        #os-container {
-            width: 90%;
-            max-width: 800px;
-            height: 80vh;
-            background: rgba(20, 20, 25, 0.9);
-            border: 1px solid #00ffcc;
-            border-radius: 15px;
-            display: flex;
-            flex-direction: column;
-            box-shadow: 0 0 20px rgba(0, 255, 204, 0.2);
-        }
-
-        #header {
-            padding: 15px;
-            border-bottom: 1px solid #333;
-            text-align: center;
-            font-weight: bold;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-        }
-
-        #chat-window {
-            flex: 1;
-            padding: 20px;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        /* Scrollbar estilizada */
-        #chat-window::-webkit-scrollbar { width: 5px; }
-        #chat-window::-webkit-scrollbar-thumb { background: #00ffcc; border-radius: 10px; }
-
-        .message {
-            max-width: 80%;
-            padding: 10px 15px;
-            border-radius: 10px;
-            line-height: 1.4;
-        }
-
-        .user-msg {
-            align-self: flex-end;
-            background: #00ffcc;
-            color: #0a0a0b;
-        }
-
-        .ai-msg {
-            align-self: flex-start;
-            background: #222;
-            border-left: 3px solid #00ffcc;
-        }
-
-        #input-area {
-            padding: 20px;
-            border-top: 1px solid #333;
-            display: flex;
-            gap: 10px;
-        }
-
-        input {
-            flex: 1;
-            background: transparent;
-            border: 1px solid #444;
-            padding: 12px;
-            color: white;
-            border-radius: 5px;
-            outline: none;
-        }
-
-        input:focus { border-color: #00ffcc; }
-
-        button {
-            background: #00ffcc;
-            border: none;
-            padding: 0 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-
-        button:hover { background: #00cca3; }
-
-        #api-setup {
-            font-size: 12px;
-            color: #666;
-            padding: 5px 20px;
-        }
+        body { background-color: #0a0a0b; color: #00ffcc; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        #os-container { width: 90%; max-width: 800px; height: 80vh; background: #141419; border: 1px solid #00ffcc; border-radius: 15px; display: flex; flex-direction: column; }
+        #chat-window { flex: 1; padding: 20px; overflow-y: auto; display: flex; flex-direction: column; gap: 15px; }
+        .message { max-width: 80%; padding: 10px; border-radius: 10px; }
+        .user-msg { align-self: flex-end; background: #00ffcc; color: #000; }
+        .ai-msg { align-self: flex-start; background: #222; border-left: 3px solid #00ffcc; }
+        #input-area { padding: 20px; border-top: 1px solid #333; display: flex; gap: 10px; }
+        input { flex: 1; background: #000; border: 1px solid #444; padding: 12px; color: white; border-radius: 5px; }
+        button { background: #00ffcc; border: none; padding: 10px 20px; cursor: pointer; font-weight: bold; }
+        
+        /* Estilo da área de segurança */
+        #config-bar { background: #111; padding: 10px; font-size: 12px; display: flex; justify-content: space-between; border-bottom: 1px solid #333; }
+        .key-input { background: #000; border: 1px solid #00ffcc; color: #00ffcc; padding: 3px; font-size: 10px; width: 150px; }
     </style>
 </head>
 <body>
 
 <div id="os-container">
-    <div id="header">Human OS Core</div>
-    <div id="api-setup">Status: Aguardando Comando...</div>
+    <div id="config-bar">
+        <span>HUMAN OS v1.0 (SECURE)</span>
+        <div>
+            <label>API KEY: </label>
+            <input type="password" id="apiKeyInput" class="key-input" placeholder="Cole sua chave aqui" onchange="saveKey()">
+        </div>
+    </div>
     
-    <div id="chat-window" id="display">
-        <div class="message ai-msg">Sistema Iniciado. Como posso ajudar hoje, Humano?</div>
+    <div id="chat-window">
+        <div class="message ai-msg">Modo Seguro ativado. Por favor, insira a sua API Key no campo acima para começarmos.</div>
     </div>
 
     <div id="input-area">
-        <input type="text" id="userInput" placeholder="Digite seu comando..." onkeypress="if(event.key === 'Enter') sendMessage()">
-        <button onclick="sendMessage()">ENVIAR</button>
+        <input type="text" id="userInput" placeholder="Comando..." onkeypress="if(event.key === 'Enter') sendMessage()">
+        <button onclick="sendMessage()">EXECUTAR</button>
     </div>
 </div>
 
 <script>
-    // --- CONFIGURAÇÃO DA MEMÓRIA ---
-    const Memory = {
-        save: (role, text) => {
-            let history = JSON.parse(localStorage.getItem('os_history')) || [];
-            history.push({ role, parts: [{ text }] });
-            if (history.length > 10) history.shift(); // Guarda as últimas 10 frases
-            localStorage.setItem('os_history', JSON.stringify(history));
-        },
-        get: () => JSON.parse(localStorage.getItem('os_history')) || []
-    };
+    // 1. Carrega a chave guardada no navegador (se existir)
+    document.getElementById('apiKeyInput').value = localStorage.getItem('gemini_key') || "";
 
-    // --- CONFIGURAÇÃO DA IA (GEMINI) ---
-    // COLOQUE SUA CHAVE ABAIXO PARA FUNCIONAR
-    const API_KEY = "SUA_CHAVE_AQUI_DENTRO_DAS_ASPAS"; 
+    function saveKey() {
+        const key = document.getElementById('apiKeyInput').value;
+        localStorage.setItem('gemini_key', key);
+        alert("Chave guardada localmente com sucesso!");
+    }
 
     async function sendMessage() {
-        const input = document.getElementById('userInput');
-        const chatWindow = document.getElementById('chat-window');
-        const text = input.value.trim();
+        const key = localStorage.getItem('gemini_key');
+        if (!key) {
+            alert("Erro: Insira a sua API KEY no topo da página primeiro!");
+            return;
+        }
 
+        const input = document.getElementById('userInput');
+        const text = input.value.trim();
         if (!text) return;
 
-        // Adiciona mensagem do usuário na tela
         appendMessage('user', text);
         input.value = "";
-
-        // Mostra que está "pensando"
-        const loadingMsg = appendMessage('ai', 'Processando...');
+        const loadingMsg = appendMessage('ai', 'A processar...');
 
         try {
-            const history = Memory.get();
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${key}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    contents: [...history, { role: "user", parts: [{ text }] }]
+                    contents: [{ role: "user", parts: [{ text: text }] }]
                 })
             });
 
             const data = await response.json();
             const aiText = data.candidates[0].content.parts[0].text;
-
-            // Remove o "Processando..." e coloca a resposta real
             loadingMsg.remove();
             appendMessage('ai', aiText);
 
-            // Salva na memória
-            Memory.save('user', text);
-            Memory.save('model', aiText);
-
         } catch (error) {
-            loadingMsg.innerText = "Erro: Verifique sua chave API ou conexão.";
-            console.error(error);
+            loadingMsg.innerText = "Erro: A chave é inválida ou houve um problema de conexão.";
         }
     }
 
@@ -188,10 +91,9 @@
         div.className = `message ${role === 'user' ? 'user-msg' : 'ai-msg'}`;
         div.innerText = text;
         chatWindow.appendChild(div);
-        chatWindow.scrollTop = chatWindow.scrollHeight; // Rola para baixo
+        chatWindow.scrollTop = chatWindow.scrollHeight;
         return div;
     }
 </script>
-
 </body>
 </html>
