Upgrade index.html to version 1.4
Updated the HTML structure and styles for version 1.4, including changes to the title, input placeholders, and chat message formatting.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Human OS v1.3 - FINAL</title>
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HUMAN OS v1.4 - FINAL</title>
     <style>
-        body { background: #000; color: #0f0; font-family: monospace; padding: 20px; }
-        #box { max-width: 500px; margin: auto; border: 1px solid #0f0; padding: 15px; background: #050505; }
-        #chat { height: 300px; overflow-y: auto; border-bottom: 1px solid #222; margin-bottom: 10px; display: flex; flex-direction: column; }
-        input { width: 100%; background: #111; border: 1px solid #0f0; color: #0f0; padding: 10px; box-sizing: border-box; margin-bottom: 5px; }
-        button { width: 100%; background: #0f0; color: #000; border: none; padding: 10px; font-weight: bold; cursor: pointer; }
-        .msg { margin: 5px 0; padding: 5px; border-radius: 4px; }
-        .u { align-self: flex-end; color: #fff; background: #005500; }
-        .a { align-self: flex-start; color: #0f0; }
+        body { background: #000; color: #0f0; font-family: monospace; padding: 20px; text-align: center; }
+        #box { max-width: 500px; margin: auto; border: 2px solid #0f0; padding: 20px; border-radius: 10px; background: #050505; box-shadow: 0 0 15px #0f0; }
+        #chat { height: 300px; overflow-y: auto; text-align: left; margin: 10px 0; border-bottom: 1px solid #222; }
+        input { width: 100%; background: #111; border: 1px solid #0f0; color: #0f0; padding: 12px; box-sizing: border-box; margin-top: 10px; }
+        button { width: 100%; background: #0f0; color: #000; border: none; padding: 12px; font-weight: bold; cursor: pointer; margin-top: 10px; }
+        .u { color: #fff; margin: 5px 0; }
+        .a { color: #0f0; margin: 5px 0; border-left: 2px solid #0f0; padding-left: 10px; }
     </style>
 </head>
 <body>
     <div id="box">
-        <h3>> HUMAN OS v1.3</h3>
-        <input type="password" id="key" placeholder="API KEY (AIza...)">
+        <h2>> HUMAN OS v1.4</h2>
+        <input type="password" id="key" placeholder="COLE SUA API KEY AQUI">
         <div id="chat"></div>
-        <input type="text" id="input" placeholder="Comando...">
-        <button onclick="enviar()">EXECUTAR</button>
+        <input type="text" id="input" placeholder="Digite algo...">
+        <button onclick="enviar()">CONECTAR</button>
     </div>
 
 <script>
@@ -30,14 +28,14 @@ async function enviar() {
     const input = document.getElementById('input');
     const chat = document.getElementById('chat');
     const txt = input.value.trim();
-
     if(!key || !txt) return;
-    chat.innerHTML += `<div class="msg u">Você: ${txt}</div>`;
+
+    chat.innerHTML += `<div class="u"><b>Você:</b> ${txt}</div>`;
     input.value = "";
 
-    // Tenta 3 nomes de modelos diferentes para não dar erro
-    const modelos = ["gemini-1.5-flash", "gemini-1.5-flash-latest", "gemini-pro"];
-    let ok = false;
+    // Tenta todas as variações de modelos possíveis
+    const modelos = ["gemini-1.5-flash", "gemini-1.5-pro", "gemini-pro"];
+    let sucesso = false;
 
     for (let m of modelos) {
         try {
@@ -48,13 +46,14 @@ async function enviar() {
                 body: JSON.stringify({ contents: [{ parts: [{ text: txt }] }] })
             });
             const data = await res.json();
-            if (!data.error) {
-                chat.innerHTML += `<div class="msg a">IA: ${data.candidates[0].content.parts[0].text}</div>`;
-                ok = true; break;
+            if (data.candidates && data.candidates[0].content) {
+                chat.innerHTML += `<div class="a"><b>IA:</b> ${data.candidates[0].content.parts[0].text}</div>`;
+                sucesso = true; break;
             }
         } catch (e) {}
     }
-    if(!ok) chat.innerHTML += `<div class="msg a" style="color:red">Erro: Falha em todos os modelos.</div>`;
+
+    if(!sucesso) chat.innerHTML += `<div style="color:red">Erro: Verifique se sua chave no Google AI Studio está ativa.</div>`;
     chat.scrollTop = chat.scrollHeight;
 }
 </script>
