Upgrade to HUMAN OS v2.0 - GROQ EDITION

--- a/index.html
+++ b/index.html
@@ -2,65 +2,60 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HUMAN OS v1.9</title>
+    <title>HUMAN OS v2.0 - GROQ EDITION</title>
     <style>
-        body { background: #000; color: #0f0; font-family: monospace; padding: 20px; text-align: center; }
-        #box { max-width: 500px; margin: auto; border: 2px solid #0f0; padding: 20px; background: #050505; }
-        #chat { height: 300px; overflow-y: auto; text-align: left; margin: 10px 0; border-bottom: 1px solid #222; }
-        input { width: 100%; background: #111; border: 1px solid #0f0; color: #fff; padding: 12px; box-sizing: border-box; margin-top: 10px; }
-        button { width: 100%; background: #0f0; color: #000; border: none; padding: 12px; font-weight: bold; cursor: pointer; margin-top: 10px; }
-        .msg { margin: 10px 0; padding: 8px; border-radius: 5px; }
-        .u { color: #fff; text-align: right; }
-        .a { color: #0f0; background: #001a00; }
+        body { background: #050505; color: #ff3e3e; font-family: 'Courier New', monospace; padding: 20px; text-align: center; }
+        #box { max-width: 500px; margin: auto; border: 2px solid #ff3e3e; padding: 20px; border-radius: 10px; background: #000; box-shadow: 0 0 20px #ff3e3e; }
+        #chat { height: 350px; overflow-y: auto; text-align: left; margin: 10px 0; border-bottom: 1px solid #330000; }
+        input { width: 100%; background: #111; border: 1px solid #ff3e3e; color: #fff; padding: 12px; box-sizing: border-box; margin-top: 10px; outline: none; }
+        button { width: 100%; background: #ff3e3e; color: #000; border: none; padding: 12px; font-weight: bold; cursor: pointer; margin-top: 10px; }
+        .u { color: #fff; margin: 8px 0; text-align: right; border-right: 2px solid #fff; padding-right: 5px; }
+        .a { color: #ff3e3e; margin: 8px 0; background: #1a0000; padding: 10px; border-radius: 5px; border-left: 2px solid #ff3e3e; }
     </style>
 </head>
 <body>
     <div id="box">
-        <h3>> HUMAN OS v1.9 (AUTO-SCAN)</h3>
-        <input type="text" id="key" placeholder="COLE SUA CHAVE AQUI">
+        <h3>> HUMAN OS v2.0 (GROQ)</h3>
+        <input type="password" id="key" placeholder="COLE SUA CHAVE gsk_... AQUI">
         <div id="chat"></div>
-        <input type="text" id="input" placeholder="Diga algo...">
+        <input type="text" id="input" placeholder="Digite sua ordem...">
         <button onclick="enviar()">EXECUTAR</button>
     </div>
+
 <script>
 async function enviar() {
     const key = document.getElementById('key').value.trim();
     const input = document.getElementById('input');
     const chat = document.getElementById('chat');
     const txt = input.value.trim();
+    
     if(!key || !txt) return;
-
-    chat.innerHTML += `<div class="msg u">Você: ${txt}</div>`;
+    chat.innerHTML += `<div class="u"><b>Você:</b> ${txt}</div>`;
     input.value = "";
 
-    // TENTA TODOS OS NOMES POSSÍVEIS QUE O GOOGLE USA EM 2026
-    const modelos = [
-        "gemini-1.5-flash-8b", 
-        "gemini-1.5-flash", 
-        "gemini-1.0-pro-001", 
-        "gemini-pro"
-    ];
+    try {
+        const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Authorization": `Bearer ${key}`
+            },
+            body: JSON.stringify({
+                model: "llama-3.3-70b-versatile",
+                messages: [{ role: "user", content: txt }]
+            })
+        });
 
-    let sucesso = false;
-    for (let m of modelos) {
-        if (sucesso) break;
-        try {
-            const url = `https://generativelanguage.googleapis.com/v1beta/models/${m}:generateContent?key=${key}`;
-            const res = await fetch(url, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ contents: [{ parts: [{ text: txt }] }] })
-            });
-            const data = await res.json();
-            if (data.candidates && data.candidates[0].content) {
-                chat.innerHTML += `<div class="msg a">IA (${m}): ${data.candidates[0].content.parts[0].text}</div>`;
-                sucesso = true;
-            }
-        } catch (e) {}
-    }
-
-    if (!sucesso) {
-        chat.innerHTML += `<div style="color:red">O Google ainda não ativou sua chave. Tente gerar uma nova no AI Studio e aguardar 5 minutos.</div>`;
+        const data = await res.json();
+        
+        if (data.error) {
+            chat.innerHTML += `<div style="color:yellow">Erro Groq: ${data.error.message}</div>`;
+        } else {
+            const resposta = data.choices[0].message.content;
+            chat.innerHTML += `<div class="a"><b>IA:</b> ${resposta}</div>`;
+        }
+    } catch (e) {
+        chat.innerHTML += `<div style="color:red">Falha total de conexão.</div>`;
     }
     chat.scrollTop = chat.scrollHeight;
 }
